Add starknetPlugin that copies impl body to module scope. (#1152)

--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -17,9 +17,11 @@ sierra_generator = { path = "../sierra_generator" }
 syntax = { path = "../syntax" }
 sierra_gas = { path = "../sierra_gas" }
 sierra_to_casm = { path = "../sierra_to_casm" }
+smol_str.workspace = true
 thiserror.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
+plugins = { path = "../plugins" }
 
 [dev-dependencies]
 indoc.workspace = true
