feat(formatter): accept input from stdin (#1139)
Co-authored-by: Shahar Papini <43779613+spapinistarkware@users.noreply.github.com>

--- a/crates/formatter/Cargo.toml
+++ b/crates/formatter/Cargo.toml
@@ -8,6 +8,7 @@ name = "formatter_cli"
 path = "src/bin/cli.rs"
 
 [dependencies]
+anyhow.workspace = true
 clap.workspace = true
 colored.workspace = true
 diffy.workspace = true
