Moved to `assert` based cairo level test. (#1161)

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -28,5 +28,5 @@ name = "examples_test"
 path = "examples_test.rs"
 
 [[test]]
-name = "snippets_test"
-path = "snippets_test.rs"
+name = "cairo_level_tests"
+path = "cairo_level_tests.rs"
