--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -21,6 +21,7 @@ smol_str.workspace = true
 thiserror.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
+utils = { path = "../utils" }
 plugins = { path = "../plugins" }
 
 [dev-dependencies]
