--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -17,6 +17,7 @@ sierra_generator = { path = "../sierra_generator" }
 syntax = { path = "../syntax" }
 sierra_gas = { path = "../sierra_gas" }
 sierra_to_casm = { path = "../sierra_to_casm" }
+sha3.workspace = true
 smol_str.workspace = true
 thiserror.workspace = true
 num-bigint.workspace = true
