--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -9,6 +9,7 @@ clap.workspace = true
 compiler = { path = "../compiler" }
 defs = { path = "../defs" }
 itertools.workspace = true
+log.workspace = true
 semantic = { path = "../semantic" }
 serde.workspace = true
 serde_json.workspace = true
@@ -24,12 +25,15 @@ num-bigint.workspace = true
 num-traits.workspace = true
 utils = { path = "../utils" }
 plugins = { path = "../plugins" }
+parser = { path = "../parser" }
 
 [dev-dependencies]
+env_logger.workspace = true
 indoc.workspace = true
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
-utils = { path = "../utils" }
+test-log.workspace = true
+utils = { path = "../utils", features=["testing"] }
 
 [[bin]]
 name = "starknet-compile"
