Move parse_test_file to test_utils. (#1235)

--- a/crates/sierra_generator/Cargo.toml
+++ b/crates/sierra_generator/Cargo.toml
@@ -32,5 +32,5 @@ log.workspace = true
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
 test-case.workspace = true
-utils = { path = "../utils", features = ["testing"] }
+test_utils = { path = "../test_utils"}
 test-log.workspace = true
