--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -33,7 +33,7 @@ indoc.workspace = true
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
 test-log.workspace = true
-utils = { path = "../utils", features=["testing"] }
+test_utils = { path = "../test_utils" }
 
 [[bin]]
 name = "starknet-compile"
