--- a/crates/lowering/Cargo.toml
+++ b/crates/lowering/Cargo.toml
@@ -28,4 +28,4 @@ indoc.workspace = true
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
 test-log.workspace = true
-utils = { path = "../utils", features = ["testing"] }
+test_utils = { path = "../test_utils" }
