--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -32,5 +32,5 @@ indoc.workspace = true
 log.workspace = true
 pretty_assertions.workspace = true
 test-log.workspace = true
-utils = { path = "../utils", features = ["testing"] }
+test_utils = { path = "../test_utils" }
 test-case.workspace = true
