--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -13,6 +13,7 @@ clap.workspace = true
 itertools.workspace = true
 log.workspace = true
 num-bigint.workspace = true
+num-traits.workspace = true
 sierra = { path = "../sierra" }
 sierra_gas = { path = "../sierra_gas" }
 thiserror.workspace = true
