Extracted runner code into a runner lib - using it in tests as well. (#1194)

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -14,6 +14,7 @@ num-bigint.workspace = true
 parser = { path = "../crates/parser" }
 plugins = { path = "../crates/plugins" }
 pretty_assertions = "1.2.1"
+runner = { path = "../crates/runner" }
 sierra = { path = "../crates/sierra" }
 sierra_gas = { path = "../crates/sierra_gas" }
 semantic = { path = "../crates/semantic", features = ["testing"] }
