--- a/crates/runner/Cargo.toml
+++ b/crates/runner/Cargo.toml
@@ -5,13 +5,16 @@ edition.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+cairo-rs.workspace = true
 clap.workspace = true
 compiler = { path = "../compiler" }
 casm = { path = "../casm" }
+num-bigint.workspace = true
 sierra = { path = "../sierra" }
 sierra_gas = { path = "../sierra_gas" }
 sierra_generator = { path = "../sierra_generator" }
 sierra_to_casm = { path = "../sierra_to_casm" }
+utils = { path = "../utils" }
 itertools.workspace = true
 salsa.workspace = true
 thiserror.workspace = true
