--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -23,6 +23,7 @@ smol_str.workspace = true
 thiserror.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
+num-integer.workspace = true
 utils = { path = "../utils" }
 plugins = { path = "../plugins" }
 parser = { path = "../parser" }
