Made test_utils run pretty_assertions. (#1249)

--- a/crates/test_utils/Cargo.toml
+++ b/crates/test_utils/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 utils = { path = "../utils" }
 log.workspace = true
 env_logger.workspace = true
+pretty_assertions.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
