Added setup plugins in various places (#1264)

--- a/crates/lowering/Cargo.toml
+++ b/crates/lowering/Cargo.toml
@@ -25,6 +25,7 @@ utils = { path = "../utils" }
 [dev-dependencies]
 env_logger.workspace = true
 indoc.workspace = true
+plugins = { path = "../plugins" }
 pretty_assertions.workspace = true
 semantic = { path = "../semantic", features = ["testing"] }
 test-log.workspace = true
