--- a/crates/sierra_to_casm/Cargo.toml
+++ b/crates/sierra_to_casm/Cargo.toml
@@ -15,6 +15,7 @@ log.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
 sierra = { path = "../sierra" }
+sierra_ap_change = { path = "../sierra_ap_change" }
 sierra_gas = { path = "../sierra_gas" }
 thiserror.workspace = true
 utils = { path = "../utils" }
