Extracted solver logic out of sierra gas. (#1279)

--- a/crates/solver/Cargo.toml
+++ b/crates/solver/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "sierra_gas"
+name = "solver"
 version.workspace = true
 edition.workspace = true
 
 [dependencies]
+good_lp.workspace = true
 itertools.workspace = true
-sierra = { path = "../sierra" }
-solver = { path = "../solver" }
-thiserror.workspace = true
 utils = { path = "../utils" }
 
 [dev-dependencies]
