--- a/crates/sierra_ap_change/Cargo.toml
+++ b/crates/sierra_ap_change/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 itertools.workspace = true
 sierra = { path = "../sierra" }
+solver = { path = "../solver" }
 thiserror.workspace = true
 utils = { path = "../utils" }
 
