Add diagnostics to plugin test. (#1329)

--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -32,6 +32,7 @@ plugins = { path = "../plugins" }
 parser = { path = "../parser" }
 
 [dev-dependencies]
+diagnostics = { path = "../diagnostics" }
 env_logger.workspace = true
 formatter = { path = "../formatter" }
 indoc.workspace = true
