--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dev-dependencies]
+assert_matches.workspace = true
 cairo-rs.workspace = true
 casm = { path = "../crates/casm" }
 compiler = { path = "../crates/compiler" }
@@ -13,7 +14,7 @@ filesystem = { path = "../crates/filesystem" }
 num-bigint.workspace = true
 parser = { path = "../crates/parser" }
 plugins = { path = "../crates/plugins" }
-pretty_assertions = "1.2.1"
+pretty_assertions.workspace = true
 runner = { path = "../crates/runner" }
 sierra = { path = "../crates/sierra" }
 sierra_gas = { path = "../crates/sierra_gas" }
@@ -22,6 +23,7 @@ sierra_generator = { path = "../crates/sierra_generator", features = ["testing"]
 sierra_to_casm = { path = "../crates/sierra_to_casm", features = ["testing"] }
 syntax = { path = "../crates/syntax" }
 test_utils = { path = "../crates/test_utils" }
+utils = { path = "../crates/utils" }
 salsa.workspace = true
 test-case.workspace = true
 
