Update contract syntax. (#1359)

--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -9,6 +9,7 @@ clap.workspace = true
 compiler = { path = "../compiler" }
 defs = { path = "../defs" }
 diagnostics = { path = "../diagnostics" }
+filesystem = { path = "../filesystem" }
 genco.workspace = true
 itertools.workspace = true
 log.workspace = true
