--- a/crates/starknet/Cargo.toml
+++ b/crates/starknet/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 anyhow.workspace = true
 clap.workspace = true
 compiler = { path = "../compiler" }
+convert_case.workspace = true
 defs = { path = "../defs" }
 diagnostics = { path = "../diagnostics" }
 filesystem = { path = "../filesystem" }
