--- a/crates/cairo-utils/Cargo.toml
+++ b/crates/cairo-utils/Cargo.toml
@@ -2,6 +2,9 @@
 name = "cairo-utils"
 version.workspace = true
 edition.workspace = true
+repository.workspace = true
+license-file.workspace = true
+description = "General utilities for the Cairo compiler project."
 
 [features]
 testing = []
