--- a/crates/cairo-sierra-generator/Cargo.toml
+++ b/crates/cairo-sierra-generator/Cargo.toml
@@ -2,16 +2,18 @@
 name = "cairo-sierra-generator"
 version.workspace = true
 edition.workspace = true
+repository.workspace = true
+license-file.workspace = true
+description = "Sierra code generation from lowered Cairo representation."
 
 [features]
 testing = []
 
 [dependencies]
-cairo-db-utils = { path = "../cairo-db-utils" }
 cairo-debug = { path = "../cairo-debug" }
 cairo-defs = { path = "../cairo-defs" }
 cairo-diagnostics = { path = "../cairo-diagnostics" }
-cairo-diagnostics-proc-macros = { path = "../cairo-diagnostics-proc-macros" }
+cairo-proc-macros = { path = "../cairo-proc-macros" }
 cairo-filesystem = { path = "../cairo-filesystem" }
 id-arena.workspace = true
 itertools.workspace = true
