--- a/crates/cairo-sierra-to-casm/Cargo.toml
+++ b/crates/cairo-sierra-to-casm/Cargo.toml
@@ -2,6 +2,9 @@
 name = "cairo-sierra-to-casm"
 version.workspace = true
 edition.workspace = true
+repository.workspace = true
+license-file.workspace = true
+description = "Emitting of CASM instructions from Sierra code."
 
 [features]
 testing = []
