--- a/crates/cairo-sierra/Cargo.toml
+++ b/crates/cairo-sierra/Cargo.toml
@@ -2,6 +2,9 @@
 name = "cairo-sierra"
 version.workspace = true
 edition.workspace = true
+repository.workspace = true
+license-file.workspace = true
+description = "Sierra representation."
 build = "src/build.rs" # LALRPOP preprocessing
 
 [build-dependencies]
