LS supports inline modules and starknet (#1567)

--- a/crates/cairo-language-server/Cargo.toml
+++ b/crates/cairo-language-server/Cargo.toml
@@ -11,6 +11,7 @@ name = "cairo-language-server"
 path = "src/bin/language_server.rs"
 
 [dependencies]
+cairo-compiler = { path = "../cairo-compiler" }
 cairo-defs = { path = "../cairo-defs" }
 cairo-debug = { path = "../cairo-debug" }
 cairo-diagnostics = { path = "../cairo-diagnostics" }
@@ -20,6 +21,7 @@ cairo-formatter = { path = "../cairo-formatter" }
 cairo-parser = { path = "../cairo-parser" }
 cairo-plugins = { path = "../cairo-plugins" }
 cairo-project = { path = "../cairo-project" }
+cairo-starknet = { path = "../cairo-starknet" }
 cairo-syntax = { path = "../cairo-syntax" }
 cairo-filesystem = { path = "../cairo-filesystem" }
 tokio.workspace = true
@@ -28,6 +30,7 @@ lsp.workspace = true
 serde_json.workspace = true
 salsa.workspace = true
 cairo-utils = { path = "../cairo-utils" }
+serde = { version = "1.0.34", features = ["derive"] }
 
 [dev-dependencies]
 test-log.workspace = true
