Add dispatcher skeleton. (#1509)

--- a/crates/cairo-starknet/Cargo.toml
+++ b/crates/cairo-starknet/Cargo.toml
@@ -17,6 +17,7 @@ cairo-filesystem = { path = "../cairo-filesystem" }
 cairo-formatter = { path = "../cairo-formatter" }
 genco.workspace = true
 itertools.workspace = true
+indoc.workspace = true
 log.workspace = true
 cairo-semantic = { path = "../cairo-semantic" }
 serde.workspace = true
