--- a/crates/cairo-runner/Cargo.toml
+++ b/crates/cairo-runner/Cargo.toml
@@ -8,7 +8,7 @@ description = "Basic cairo runner."
 
 [dependencies]
 anyhow.workspace = true
-cairo-rs.workspace = true
+cairo-vm.workspace = true
 clap.workspace = true
 cairo-compiler = { path = "../cairo-compiler" }
 cairo-casm = { path = "../cairo-casm" }
