--- a/crates/cairo-test-runner/Cargo.toml
+++ b/crates/cairo-test-runner/Cargo.toml
@@ -8,7 +8,7 @@ description = "Cairo tests runner. Used to run tests written in Cairo."
 
 [dependencies]
 anyhow.workspace = true
-cairo-rs.workspace = true
+cairo-vm.workspace = true
 cairo-casm = { path = "../cairo-casm" }
 clap.workspace = true
 colored.workspace = true
